--- a/passport-api/pom.xml
+++ b/passport-api/pom.xml
@@ -5,13 +5,13 @@
     <artifactId>zizaike-passport</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>passport-service</artifactId>
+  <artifactId>passport-api</artifactId>
   <packaging>war</packaging>
-  <name>passport-service</name>
-  <description>passport服务</description>
-  <url>http://wiki.office.zizaike.com/pages/viewpage.action?pageId=4423747</url>
+  <name>passport-api</name>
+  <description>passport API</description>
+<url>http://wiki.office.zizaike.com/pages/viewpage.action?pageId=4423747</url>
 	<properties>
-		<project.build.finalname>passport-service</project.build.finalname>
+		<project.build.finalname>passport-api</project.build.finalname>
 	</properties>
 	<build>
 		<finalName>${project.build.finalname}</finalName>
@@ -33,10 +33,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-                    <excludes>
-                        <exclude>**/Hessian*.java</exclude>
-                    </excludes>
-                </configuration>
+					<skipTests>true</skipTests>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
