--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <description>passport 相关</description>
   <modules>
   	<module>passport-service</module>
+  	<module>passport-api</module>
   </modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -26,7 +27,7 @@
 
 		<zizaike.core.version>1.0.6-SNAPSHOT</zizaike.core.version>
 		<zizaike.entity.version>1.0.11-SNAPSHOT</zizaike.entity.version>
-		<zizaike.is.version>1.0.10-SNAPSHOT</zizaike.is.version>
+		<zizaike.is.version>1.0.11-SNAPSHOT</zizaike.is.version>
 		<!-- Spring -->
 		<org.springframework.version>4.0.2.RELEASE</org.springframework.version>
 		<org.springframework.security.version>3.2.3.RELEASE</org.springframework.security.version>
