add password and passport

--- a/passport-api/pom.xml
+++ b/passport-api/pom.xml
@@ -282,5 +282,9 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
+		<dependency>
+            <groupId>com.dianping.cat</groupId>
+            <artifactId>cat-core</artifactId>   
+      	</dependency>
 	</dependencies>
 </project>
