--- a/passport-service/src/main/webapp/WEB-INF/web.xml
+++ b/passport-service/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,17 @@
 	  <listener>
         <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
     </listener>
+    <!-- cat -->
+    <filter>
+        <filter-name>cat-filter</filter-name>
+        <filter-class>com.dianping.cat.servlet.CatFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>cat-filter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+    </filter-mapping>
     
         <!--#################################################### CharacterEncodingFilter ############################################# -->
     <filter>
