--- a/pom.xml
+++ b/pom.xml
@@ -476,6 +476,12 @@
 				<artifactId>commons-lang3</artifactId>
 				<version>3.1</version>
 			</dependency>
+			<!-- cat 监控 -->
+			 <dependency>
+	            <groupId>com.dianping.cat</groupId>
+	            <artifactId>cat-core</artifactId>   
+	            <version>1.3.6</version>
+       		</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
