--- a/passport-service/src/main/resources/logback.properties
+++ b/passport-service/src/main/resources/logback.properties
@@ -1,4 +1,5 @@
 #log
 log.level=INFO
 log.file=/apps/logs/zizaike-passport/passport-service/passport-service.log
-
+log.stash.host=stash.host
+log.stash.port=4560
