--- a/passport-api/pom.xml
+++ b/passport-api/pom.xml
@@ -286,5 +286,10 @@
             <groupId>com.dianping.cat</groupId>
             <artifactId>cat-core</artifactId>   
       	</dependency>
+      	<!-- logstash -->
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+		</dependency>
 	</dependencies>
 </project>
