--- a/pom.xml
+++ b/pom.xml
@@ -482,6 +482,12 @@
 	            <artifactId>cat-core</artifactId>   
 	            <version>1.3.6</version>
        		</dependency>
+       		<!-- logstash -->
+			<dependency>
+				<groupId>net.logstash.logback</groupId>
+				<artifactId>logstash-logback-encoder</artifactId>
+				<version>4.7</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
